@@ -1,6 +1,6 @@
 lib_LTLIBRARIES=libumwsu.la
 
-libumwsu_la_SOURCES=module.c
+libumwsu_la_SOURCES=module.c dir.c dir.h
 
 libumwsu_la_CFLAGS= -I$(top_srcdir)/include
 libumwsu_la_LIBADD= 
