@@ -1,4 +1,4 @@
-check_PROGRAMS=testmodule1
+check_PROGRAMS=testmodule1 testfind1
 
 testmodule1_CFLAGS= -I$(top_srcdir)/include
 testmodule1_LDADD=$(top_builddir)/src/libumwsu.la @GMODULE2_LIBS@
@@ -8,3 +8,7 @@ lib_LTLIBRARIES=module1.la
 
 module1_la_SOURCES=module1.c
 module1_la_LDFLAGS= -module -avoid-version
+
+testfind1_CFLAGS=-I$(top_srcdir)/include -I$(top_srcdir)/src
+testfind1_LDADD=$(top_builddir)/src/libumwsu.la @GMODULE2_LIBS@
+testfind1_SOURCES=testfind1.c
